--- a/index.html
+++ b/index.html
@@ -10,12 +10,23 @@
 </head>
 <body>
 <a-scene>
-    <!-- Right hand entity -->
-    <a-entity 
-        id="rightHand"
-        hand-controls="hand: right; handModelStyle: lowPoly; color: #ffcccc"
-        super-hands
-        sphere-collider="objects: a-box">
+    <!-- Camera Rig -->
+    <a-entity id="cameraRig" movement-controls="speed: 0.1">
+        <!-- Camera -->
+        <a-entity 
+            camera 
+            position="0 1.6 0"
+            look-controls>
+        </a-entity>
+
+        <!-- Right hand entity -->
+        <a-entity 
+            id="rightHand"
+            position="0.5 -0.5 -0.5"
+            hand-controls="hand: right; handModelStyle: lowPoly; color: #ffcccc"
+            super-hands
+            sphere-collider="objects: a-box">
+        </a-entity>
     </a-entity>
 
     <!-- Grabbable box -->
