--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
 <body>
 <a-scene>
     <!-- Camera Rig -->
-    <a-entity id="cameraRig" movement-controls="speed: 0.1">
+    <a-entity id="cameraRig" >
         <!-- Camera -->
         <a-entity 
+            gamepad-controls="speed: 0.1" wasd-controls="speed: 0.1"
             camera 
             position="0 1.6 0"
             look-controls>
