--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 <a-scene>
     <!-- Camera Rig -->
-    <a-entity id="cameraRig" >
+    <a-entity id="cameraRig" movement-controls="controls: gamepad, keyboard" position="0 0 0" >
         <!-- Camera -->
         <a-entity 
             gamepad-controls="speed: 0.1" wasd-controls="speed: 0.1"
@@ -19,6 +19,23 @@
             position="0 1.6 0"
             look-controls>
         </a-entity>
+
+
+    </a-entity>
+
+        <!-- Camera Rig with Movement Controls -->
+        <a-entity id="rig" movement-controls="controls: gamepad, keyboard" position="0 0 0">
+            <!-- Camera -->
+            <a-camera>
+                <a-cursor
+                    position="0 0 -1"
+                    geometry="primitive: sphere; radius: 0.005; segmentsWidth: 4; segmentsHeight: 4"
+                    material="color: #0FFF00; shader: flat; opacity: 0.5"
+                    raycaster="objects: .clickable">
+                </a-cursor>
+            </a-camera>
+
+            <!-- VR Hand Controllers -->
 
         <!-- Right hand entity -->
         <a-entity 
@@ -28,7 +45,14 @@
             super-hands
             sphere-collider="objects: a-box">
         </a-entity>
-    </a-entity>
+        </a-entity>
+
+
+
+
+
+
+
 
     <!-- Grabbable box -->
     <a-box 
